last changes to docs and bumping version

--- a/docs/upgrading/1.5-to-1.6.md
+++ b/docs/upgrading/1.5-to-1.6.md
@@ -120,4 +120,21 @@ This entire API is now only available to C developers (i.e. using `eosio-cc`), a
    - no changes
 
 ### Auto Code Generation
-There is no more need to add the `EOSIO_DISPATCH` macro 
+There is no more need to add the `EOSIO_DISPATCH` macro to your smart contracts.  The compiler/linker will now automatically generate a dispatcher for you the proper `eosio::contract`, `eosio::action` and `eosio::on_notify` attributes are used.  Of course, if you don't have these attributes then you will still need to either use the old macro or hand write the `apply` function yourself.
+
+#### How the auto dispatcher will work
+Given that you have marked your classes with the `eosio::contract` macro and any sub-contracts with the macro with the same given name (i.e. `eosio::contract("<contract name>")`) then any actions and notify handlers that are contained within these will be dispatchable by your smart contract.  This will allow for aggregate patterns for smart contract development and better separation of concerns. 
+
+ In addition to actions and notification handlers, two new "hooks" are available.
+   - `bool pre_dispatch(name self, name first_receiver, name action)`
+   - `void post_dispatch(name self, name first_receiver, name action)`
+
+The `pre_dispatch` hook will fire when the dispatcher is run and allow the smart contract to do some pre-validation and exit early if need be by returning false.  If the function returns true then the dispatcher continues to dispatching the actions or notification handlers.
+
+The `post_dispatch` hook will only fire when the dispatcher has failed to match any notification handlers, this allows the user to do some meaningful last ditch validation.
+
+If the dispatcher fails to find a suitable action to dispatch, then the new pattern is to fail assert with an error code.  This will keep your smart contracts from being used as a sink by other users by accident (they inputted the wrong action name).  This will give them clear direction at that point that the action they tried doesn't exist on your contract.
+
+If the dispatcher is in notification handling mode and if your contract receives an `eosio::onerror` notification, then the contract will assert with an error code. You can circumvent this check if you explicitly supply an error handler for it ([[eosio::on_notify("eosio::onerror")]]).
+
+For a real world example of this new style of contract in use see `tests/unit/test_contracts/simple_test.cpp`.
