--- a/docs/04_upgrading/1.5-to-1.6.md
+++ b/docs/04_upgrading/1.5-to-1.6.md
@@ -141,4 +141,4 @@ For a real world example of this new style of contract in use see `tests/unit/te
 
 License
 ----
-[MIT](../LICENCE)
+[MIT](../../LICENSE)
