Prepare the merge of  branch 'docs/starter' of https://github.com/EOSIO/eosio.cdt into release/1.7.x branch

--- a/docs/04_upgrading/1.5-to-1.6.md
+++ b/docs/04_upgrading/1.5-to-1.6.md
@@ -138,3 +138,7 @@ If the dispatcher fails to find a suitable action to dispatch, then the new patt
 If the dispatcher is in notification handling mode and if your contract receives an `eosio::onerror` notification, then the contract will assert with an error code. You can circumvent this check if you explicitly supply an error handler for it ([[eosio::on_notify("eosio::onerror")]]).
 
 For a real world example of this new style of contract in use see `tests/unit/test_contracts/simple_test.cpp`.
+
+License
+----
+[MIT](../../LICENSE)
