Migrate write ABI file guide, add link, add docs.json

--- a/docs/04_upgrading/1.2-to-1.3.md
+++ b/docs/04_upgrading/1.2-to-1.3.md
@@ -210,7 +210,7 @@ For an example contract of ABI generation see the file ./examples/abigen_test/te
 ## Fixing an ABI or Writing an ABI Manually
 - The sections to the ABI are pretty simple to understand and the syntax is purely JSON, so it is reasonable to write an ABI file manually.
 - The ABI generation will never be completely perfect for every contract written. Advanced features of the newest version of the ABI will require manual construction of the ABI, and odd and advanced C++ patterns could capsize the generator's type deductions. So having a good knowledge of how to write an ABI should be an essential piece of knowledge of a smart contract writer.
-- Please refer to [developers.eos.io "How to Write an ABI File"](https://developers.eos.io/eosio-cpp/docs/how-to-write-an-abi) to learn about the different sections of an ABI.
+- Read ["How to Write an ABI File"](../06_how-to-guides/05_how-to-write-an-abi-file.md) to learn about the different sections of an ABI.
 
 ## Adding Ricardian Contracts and Clauses to ABI
 - As of EOSIO.CDT v1.4.0, the ABI generator will try to automatically import contracts and clauses into the generated ABI.  There are a few caveats to this, one is a strict naming policy of the files and an HTML tag used to mark each Ricardian contract and each clause.
