chang name to 256

--- a/docs/04_upgrading/1.2-to-1.3.md
+++ b/docs/04_upgrading/1.2-to-1.3.md
@@ -149,8 +149,8 @@ content_title: Version 1.3
      uint64_t a;
      int b;
   };
-  typedef eosio::multi_index<"testtaba"_n, test::taba> table_a;
-  typedef eosio::multi_index<"testtabb"_n, tabb> table_b;
+  typedef eosio::multi_index<NT(testtaba), test::taba> table_a;
+  typedef eosio::multi_index<NT(testtabb), tabb> table_b;
   EOSIO_DISPATCH( test, (acta) )
   ```
   The above code will produce the tables `testtaba` and `testtabb` in your ABI. Example: `eosio-cpp -abigen test.cpp -o test.wasm` will mark this compilation and ABI generation for the `eosio::contract` `test`. The same thing can be done with `eosio-cpp -abigen test.cpp -o test_contract.wasm --contract test` or with the CMake command `add_contract( test, test_contract, test.cpp )`. Either of the previous two approaches will produce a test_contract.wasm and test_contract.abi generated under the context of the contract name of `test`.
@@ -201,7 +201,7 @@ struct __attribute__((eosio_table)) testtable {
    /* all other fields */
 };
 
-typedef eosio::multi_index<"tablename"_n, testtable> testtable_t;
+typedef eosio::multi_index<NT(tablename), testtable> testtable_t;
 ```
 If you don't want to use the multi-index you can explicitly specify the name in the attribute ```c++ [[eosio::table("<valid action name>")]]```.
 
